scrollbar fix

--- a/client/src/components/disk/filesList/fileList.less
+++ b/client/src/components/disk/filesList/fileList.less
@@ -1,4 +1,3 @@
-
 .filelist {
   margin-top: 1rem;
   margin-bottom: 2rem;
@@ -15,7 +14,6 @@
     text-align: center;
     margin-bottom: 1rem;
   }
-
   &__img {
     grid-column-start: 1;
     align-self: center;
@@ -42,12 +40,16 @@
     grid-column-start: 7;
     align-self: center;
   }
+  &__board {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    max-height: 62vh;
 
-  &__board::-webkit-scrollbar {
-    display: none;
-    overflow: scroll;
-    -ms-overflow-style: none;  /* IE and Edge */
-
+    &::-webkit-scrollbar {
+      display: none;
+      overflow: scroll;
+      -ms-overflow-style: none;
+    }
   }
 }
 
@@ -59,11 +61,25 @@
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
+    overflow: scroll;
+    max-height: 50vh;
+
+    &::-webkit-scrollbar {
+      width: 0.5rem;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: #808080;
+      border-radius: 6px;
+    }
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
   }
 }
 
+
 .files__types{
-  margin-top: 1.5rem;
+  margin-top: 1rem;
   width: 100%;
   height: 35%;
   display: flex;
@@ -90,10 +106,8 @@
     width: 7rem;
     height: 7rem;
     border-radius: 1rem;
-    //margin: 0.3rem;
     box-shadow: 5px 1px 20px #c0c0c0;
   }
-
   .docs_title, .img_title, .videos_title, .other_title {
     width: 55%;
     height: 80%;
@@ -109,7 +123,7 @@
 .horizontal_line {
   width: 100%;
   height: 1px;
-  margin-top: 2rem;
+  margin-top: 1rem;
   background-color: #d2d2d2;
   border-radius: 1rem;
   outline: none;
@@ -156,4 +170,24 @@
       font-size: 20px;
     }
   }
+}
+
+:global(.filelist__board) {
+  overflow: scroll;
+}
+
+:global(.filelist__board::-webkit-scrollbar) {
+  display: none;
+  overflow: scroll;
+  -ms-overflow-style: none;
+}
+
+:global(.filegrid__board) {
+  overflow: scroll;
+}
+
+:global(.filegrid__board::-webkit-scrollbar) {
+  display: none;
+  overflow: scroll;
+  -ms-overflow-style: none;
 }
